# movies-ugc-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  common-services.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
mongo/: add_shards.js  enable_sharding.js  init_config.js  init_database.js  init_shard1.js  init_shard2.js
nginx/: nginx.conf
nginx/conf.d/: ugc.conf
tests/functional/: .env.example  Dockerfile  config.py  conftest.py  docker-compose.yml  requirements.txt
tests/functional/src/: test_bookmarks.py  test_ratings.py  test_reviews.py
tests/functional/utils/: depends.py  jwt.py  wait_for_mongo.py
ugc/: .env.example  Dockerfile  requirements.txt
ugc/src/: main.py
ugc/src/api/v1/: bookmarks.py  rating.py  reviews.py
ugc/src/api/v1/commons/: params.py
ugc/src/api/v1/utils/: validators.py
ugc/src/core/: config.py  containers.py  logger.py
ugc/src/db/: base.py  mongo.py
ugc/src/exceptions/: base.py  bookmarks.py  movies.py  ratings.py  reviews.py
ugc/src/models/: base.py  bookmarks.py  movies.py  ratings.py  reviews.py
ugc/src/repositories/: bookmarks.py  ratings.py  reviews.py
ugc/src/repositories/abstract/: repository.py
ugc/src/services/: bookmarks.py  ratings.py  reviews.py
